error.utilidades.txt
Tarea_4/Utilidades.java:130: error: This backslash token is unknown: \permutes
      @         (\permutes a, \old(a));
                 ^
Tarea_4/Utilidades.java:130: error: ')' expected
      @         (\permutes a, \old(a));
                          ^
Tarea_4/Utilidades.java:130: error: Incorrectly formed or terminated ensures statement near here
      @         (\permutes a, \old(a));
                           ^
Tarea_4/Utilidades.java:138: error: This backslash token is unknown: \permutes
          @ maintaining (\permutes a, \old(a));
                         ^
Tarea_4/Utilidades.java:138: error: ')' expected
          @ maintaining (\permutes a, \old(a));
                                  ^
Tarea_4/Utilidades.java:138: error: Incorrectly formed or terminated loop_invariant statement near here
          @ maintaining (\permutes a, \old(a));
                                   ^
6 errors
